# Cyber_analysis

./: .gitignore  LICENSE  README.md  config.toml.example  cyber-analyze.bat  daemon.py  main.py  pyproject.toml  traffic-analyze.bat
src/cyber_analysis/: __init__.py  cli.py  config_manager.py  flow_loader.py  llm_config.py  logger.py  orchestrator.py  pcap_analyzer.py  zeek_adapter.py
src/cyber_analysis/experts/: __init__.py  beacon_detector.py  local_expert.py  threat_intel.py
src/traffic_analysis/: config_manager.py  constants.py  feature_extractor.py  logger.py  report_formatter.py  session_loader.py  triage_pipeline.py  zeek_adapter.py
src/traffic_analysis/experts/: analyzers.py
zeek/: anomaly_detector.zeek  run.sh
