[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traffic-analysis"
version = "0.2.0"
description = "千万级网络流量分析 — 大小模型调度系统"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "huggingface-hub>=1.23.0",
    "llama-cpp-python",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "paramiko>=5.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
traffic-analyze = "traffic_analysis.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
pcap = [
    "scapy>=2.5.0",
]

[tool.uv]
package = true
