[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyber_analysis"
version = "0.2.0"
description = "AI驱动的网络流量分析器 — 大小模型双层漏斗架构"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "huggingface-hub>=1.23.0",
    "llama-cpp-python",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "paramiko>=5.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
cyber-analyze = "traffic_analysis.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
pcap = [
    "scapy>=2.5.0",
]

[tool.uv]
package = true
